// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma/client"
}

datasource db {
  provider          = "mysql"
  url               = env("DATABASE_URL")
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
  relationMode      = "foreignKeys"
}

enum Role {
  AGENCY_OWNER // Creator and can change the agency information
  AGENCY_ADMIN // Can manage the agency and workspace
  AGENCY_USER // Dependent on the permissions
}

model Session {
  id             String   @id @default(uuid())
  userId         String
  token          String   @unique
  expiresAt      DateTime
  ipAddress      String?
  userAgent      String?
  impersonatedBy String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  User User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Account {
  id                    String    @id @default(uuid())
  userId                String
  accountId             String
  providerId            String
  accessToken           String?   @db.Text
  refreshToken          String?   @db.Text
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  idToken               String?
  password              String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  User User @relation(fields: [userId], references: [id])
}

model User {
  id            String   @id @default(uuid())
  name          String
  image         String?  @db.Text
  email         String   @unique
  emailVerified Boolean  @default(false)
  role          String   @default("user")
  banned        Boolean? @default(false)
  banReason     String?
  banExpires    Int?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  notifications   Notification[]
  agencyMember    AgencyMember?
  tickets         Ticket[]
  session         Session[]
  account         Account[]
  comments        UserComment[]
  likes           Likes[]
  commentLikes    CommentLikes[]
  posts           UserPost[]
  profile         UserProfile?
  bookmarkedPosts Post[]         @relation("UserBookmarkedPosts")
}

model Verification {
  id         String   @id @default(uuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

model AgencyMember {
  id       String @id @default(uuid())
  email    String @unique
  agencyId String
  role     Role

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user        User         @relation(fields: [email], references: [email])
  agency      Agency       @relation(fields: [agencyId], references: [id])
  permissions Permission[]

  @@index([email])
  @@index([agencyId])
}

model Permission {
  id             String  @id @default(uuid())
  agencyMemberId String
  workspaceId    String
  access         Boolean
  manager        Boolean

  agencyMember AgencyMember @relation(fields: [agencyMemberId], references: [id])
  workspace    Workspace    @relation(fields: [workspaceId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([agencyMemberId])
  @@index([workspaceId])
}

model Agency {
  id String @id @default(uuid())

  name             String
  agencyLogo       String @db.Text
  companyEmail     String @db.Text
  companyPhone     String @db.Text
  stripeCustomerId String @default("")

  address String
  city    String
  zipCode String
  state   String
  country String

  agencyMembers AgencyMember[]
  workspaces    Workspace[]
  invitations   Invitation[]
  clients       Client[]
  subscription  Subscription?
  posts         AgencyPost[]
  comments      AgencyComment[]
  profile       AgencyProfile?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([id])
}

model Workspace {
  id          String @id @default(uuid()) // UUIDv7 for workspace ID
  agencyId    String // Agency ID
  name        String // Name of the workspace
  description String @db.Text // Description of the workspace

  agency      Agency       @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  permissions Permission[]
  lane        Lane[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([agencyId])
}

enum ClientStatus {
  LEAD
  ONBOARDING
  ACTIVE
  INACTIVE
  LOST
}

model Client {
  id       String @id @default(uuid()) // UUIDv7 for client ID
  agencyId String // Agency ID
  name     String // Name of the client
  email    String // Email of the client
  phone    String // Phone number of the client

  city    String // City of the client for the tracking
  state   String // State of the client for the tracking
  country String // Country of the client for the tracking

  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt
  status    ClientStatus @default(LEAD) // Status of the client

  agency  Agency   @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  tickets Ticket[]

  @@index([agencyId])
}

enum TicketTag {
  High
  Medium
  Low
}

model Lane {
  id          String @id
  name        String
  order       Int
  colour      String @db.VarChar(6)
  workspaceId String

  workspace Workspace @relation(fields: [workspaceId], references: [id])
  tickets   Ticket[]

  @@index([id])
  @@index([workspaceId])
}

model Ticket {
  id             String    @id @default(uuid()) // UUIDv7 for ticket ID
  title          String // Title of the ticket
  description    String    @db.Text // Description of the ticket
  value          Int // Value of the ticket (in currency)
  open           Boolean // Indicates if the ticket is open or closed
  tag            TicketTag // Tag for the ticket
  order          Int // Order of the ticket in the lane
  clientId       String? // Client ID
  laneId         String
  assigneeUserId String? // User ID

  client       Client? @relation(fields: [clientId], references: [id])
  assigneeUser User?   @relation(fields: [assigneeUserId], references: [id])
  lane         Lane    @relation(fields: [laneId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([clientId])
  @@index([assigneeUserId])
}

enum InvitationStatus {
  PENDING
  ACCEPTED
  REJECTED
}

model Invitation {
  id       String           @id @default(uuid()) // UUIDv7 for invitation ID
  email    String // Email of the user
  agencyId String // Agency ID
  role     Role // Role of the user
  status   InvitationStatus @default(PENDING) // Status of the invitation

  agency Agency @relation(fields: [agencyId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([email])
  @@index([agencyId])
}

model Notification {
  id           String  @id @default(uuid()) // UUIDv7 for notification ID
  message      String // Notification message
  read         Boolean @default(false) // Indicates if the notification is read
  metadata     String? // metadata for the notification
  resourceId   String? // Resource ID
  resourceType String? // Resource type
  userId       String // User ID
  user         User    @relation(fields: [userId], references: [id])

  createdAt DateTime @default(now()) // Creation date of the notification
  updatedAt DateTime @updatedAt // Last update date of the notification

  @@index([userId])
}

enum FeatureCode {
  TEAM_MEMBERS
  WORKSPACE
  FILE_STORAGE
  CUSTOM_URL
}

model Package {
  id                    String  @id @default(uuid()) // UUIDv7 for package ID
  name                  String // Unique name for the package
  monthlyPrice          Decimal // Monthly price for the package
  retired               Boolean @default(false) // Indicates if the package is retired
  stripePriceIdMonthly  String  @default("")
  stripeLinkMonthly     String  @default("")
  stripePriceIdAnnually String  @default("")
  stripeLinkAnnually    String  @default("")

  features      Feature[] // Features included in the package
  subscriptions Subscription[] // Subscriptions for the package

  @@index([id])
}

model Feature {
  id        String      @id @default(uuid()) // UUIDv7 for feature ID
  code      FeatureCode // Enum type for feature code
  name      String // Descriptive name for the feature
  maxLimit  Int? // Optional max limit, e.g., 3 team members
  hasAccess Boolean? // Optional, represents access (true/false)
  packageId String // Package ID that the feature belongs to

  package Package @relation(fields: [packageId], references: [id])
}

enum SubscriptionStatus {
  ACTIVE
  INCOMPLETE
  INCOMPLETE_EXPIRED
  TRIALING
  CANCELED
  PAST_DUE
  UNPAID
}

model Subscription {
  id                   String             @id @default(uuid()) // UUIDv7 for subscription ID
  packageId            String // Package ID
  price                String? // Price of the package
  agencyId             String             @unique() // Agency ID
  priceId              String // Price ID of the package
  stripeSubscriptionId String             @unique // Stripe subscription ID
  stripeCustomerId     String // Stripe customer ID for tracking user on Stripe
  currentPeriodEnd     DateTime // End of the current billing period
  active               Boolean            @default(false) // Active status of the package
  status               SubscriptionStatus // Enum field to track subscription status

  package Package @relation(fields: [packageId], references: [id])
  agency  Agency  @relation(fields: [agencyId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([id])
  @@index([agencyId])
  @@index([stripeCustomerId])
  @@index([stripeSubscriptionId])
}

model Category {
  id          String @id @default(uuid())
  name        String @unique
  title       String
  description String

  posts Post[]
}

model Tag {
  id   String @id @default(uuid())
  name String @unique

  posts PostTag[]
}

model PostTag {
  postId String
  tagId  String

  post Post @relation(fields: [postId], references: [id])
  tag  Tag  @relation(fields: [tagId], references: [id])

  @@id([postId, tagId])
  @@index([postId, tagId])
}

model Post {
  id         String @id @default(uuid()) // UUIDv7 for post ID
  title      String
  content    String @db.Text
  categoryId String

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  comments    Comment[]
  likes       Likes[]
  category    Category     @relation(fields: [categoryId], references: [id])
  userPosts   UserPost[]
  agencyPosts AgencyPost[]
  tags        PostTag[]

  bookmarkedBy User[] @relation("UserBookmarkedPosts")

  @@index([id])
}

model Comment {
  id             String          @id @default(uuid()) // UUIDv7 for comment ID
  content        String          @db.Text
  postId         String
  post           Post            @relation(fields: [postId], references: [id], onDelete: Cascade)
  parentId       String?
  parent         Comment?        @relation("ParentChild", fields: [parentId], references: [id], onDelete: Cascade)
  children       Comment[]       @relation("ParentChild")
  likes          CommentLikes[]
  userComments   UserComment[]
  agencyComments AgencyComment[]

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  @@index([id])
}

model UserComment {
  userId    String
  commentId String

  user    User    @relation(fields: [userId], references: [id])
  comment Comment @relation(fields: [commentId], references: [id])

  @@id([userId, commentId])
  @@index([userId])
  @@index([commentId])
}

model AgencyComment {
  agencyId  String
  commentId String

  agency  Agency  @relation(fields: [agencyId], references: [id])
  comment Comment @relation(fields: [commentId], references: [id])

  @@id([agencyId, commentId])
  @@index([agencyId])
  @@index([commentId])
}

enum LikeType {
  LIKE
  DISLIKE
}

model Likes {
  userId String
  postId String
  type   LikeType

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@id([userId, postId])
  @@index([userId, postId])
}

model CommentLikes {
  userId    String
  commentId String
  type      LikeType

  user    User    @relation(fields: [userId], references: [id])
  comment Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)

  @@id([userId, commentId])
  @@index([userId, commentId])
}

model UserPost {
  userId String
  postId String

  user User @relation(fields: [userId], references: [id])
  post Post @relation(fields: [postId], references: [id])

  @@id([userId, postId])
  @@index([userId])
  @@index([postId])
}

model AgencyPost {
  agencyId String
  postId   String

  agency Agency @relation(fields: [agencyId], references: [id])
  post   Post   @relation(fields: [postId], references: [id])

  @@id([agencyId, postId])
  @@index([agencyId])
  @@index([postId])
}

model Profile {
  id      String  @id @default(uuid())
  tagline String? @db.Text
  content String? @db.Text
  title   String? @db.Text

  userProfile   UserProfile?
  agencyProfile AgencyProfile?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([id])
}

model UserProfile {
  userId    String @unique
  profileId String @unique

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)

  @@id([userId, profileId])
  @@index([userId, profileId])
}

model AgencyProfile {
  agencyId  String @unique
  profileId String @unique

  agency  Agency  @relation(fields: [agencyId], references: [id], onDelete: Cascade)
  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)

  @@id([agencyId, profileId])
  @@index([agencyId, profileId])
}
